--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html{
+    display: flex;
+    justify-content: center;
+    
+
+}
+body{
+    width: 80%;
+}
