--- a/src/app/pipes/pipes.component.html
+++ b/src/app/pipes/pipes.component.html
@@ -1,1 +1,4 @@
-<p>pipes works!</p>
+<p>{{ title | uppercase | titlecase}}</p>
+<p>I have {{45.50 | currency}}</p>
+<p>I have {{45.50 | currency: 'EUR'}}</p>
+<p>I have {{45.50 | currency: 'EUR' : 'code'}}</p>
